Summary of changes between MikMod 3.2.4 and MikMod 3.2.5 ():
==================================================================

MikMod 3.2.4 was released on XX/XXX/XXXX.

- New CMake build system.
- Small autotols updates.
- Fix configury $datadir variable expansion in PACKAGE_DATA_DIR.
- Several code clean-ups.


Summary of changes between MikMod 3.2.3 and MikMod 3.2.4 ():
==================================================================

MikMod 3.2.4 was released on 14/Oct/2013.
This is a minor bug fix/maintenance release.

- Addressed some snprintf issues and MSVC6 compilation issues.
- New MSVC6 and VS2005 project files. The latter imports into newer
  Visual Studio versions, e.g. VS2012.
- Use MikMod_free() on the string returned by Player_LoadTitle() if
  it is available.
- Fixed some compiler warnings, minor cleanups.


Summary of changes between MikMod 3.2.2 and MikMod 3.2.3 ():
==================================================================

MikMod 3.2.3 was released on 05/Oct/2013.
This is a maintenance release to fix minor bugs since mikmod-3.2.2

BUGFIXES

- Made MikMod compilable against older versions of libmikmod
  without MikMod_Free().
- Fixed a minor buffer overrun (sf.net bug #2).
- Fixed a minor string format issue.
- Updated configury to support latest autotools.
- Fixed djgpp builds.
- Fixed windows mingw builds, proper win64 support.


Summary of changes between MikMod 3.1.6 and MikMod 3.2.2 (Vitray):
==================================================================

MikMod 3.2.2 was released on 23/Jun/2012
beta1: Mon Feb 2, 2004
beta0: never officially released

THANKS

- The winner of the ``it's rainy day, so I'll rewrite MikMod'' contest this
  time is Andrew Zabolotny. The colored MikMod looks great ! Thanks a lot !

- To Frank Loemker, who has done many changes since the last release in 1999,
  has improved the widget system a lot, added a file selector, theme support,